Fix layout issue

--- a/static/src/stylesheets/module/facia-cards/_l-list.scss
+++ b/static/src/stylesheets/module/facia-cards/_l-list.scss
@@ -10,10 +10,6 @@
 .l-list__item {
     float: left;
 
-    @include mq(tablet) {
-        max-width: 50%;
-    }
-
     .has-flex-wrap & {
         @include flex-grow(0);
         @include flex-basis(100%);
